3-model-serving/argo-events/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-webhook
  namespace: argo-events
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx

  rules:
  - host: <your-domain>
    http:
      paths:
      - path: /github
        pathType: Prefix
        backend:
          service:
            name: github-eventsource-svc
            port:
              number: 12000
